--- a/composer.json
+++ b/composer.json
@@ -6,7 +6,11 @@
     },
     "require-dev": {
         "yiisoft/yii": "~1.1",
-        "phpunit/phpunit": "~3.7"
+        "phpunit/phpunit": "~3.7",
+        "phpunit/php-invoker": "*",
+        "phpunit/dbunit": ">=1.2",
+        "phpunit/phpunit-selenium": ">=1.4",
+        "phpunit/phpunit-story": "*"
     },
     "license": "MIT",
     "authors": [
