--- a/composer.json
+++ b/composer.json
@@ -1,5 +1,5 @@
 {
-    "name": "ddinchev/yii-factory-girl",
+    "name": "amashigeseiji/yii-factory-girl",
     "description": "Yii 1.1 fixture replacement framework. Inspired by factory_girl_rails and kengos' FactoryGirl for Yii.",
     "require": {
         "php": ">=5.3.0"
@@ -22,7 +22,7 @@
     "minimum-stability": "dev",
     "autoload": {
         "psr-0": {
-            "YiiFactoryGirl": "src/"
+            "YiiFactoryGirl\\": "src/"
         }
     }
 }
